fixed weird spacing when too many stats are showing

--- a/app/assets/styles/core/_inpages.scss
+++ b/app/assets/styles/core/_inpages.scss
@@ -279,8 +279,12 @@
     padding-right: $global-spacing * 2;
     margin-right: $global-spacing * 2;
     @include media(medium-up) {
-      padding-right: $global-spacing * 4;
-      margin-right: $global-spacing * 4;
+      padding-right: $global-spacing * 3;
+      margin-right: $global-spacing * 3;
+    }
+    @include media(medium-down) {
+      box-shadow: none;
+      font-size: .8em;
     }
     &:last-child {
       box-shadow: none;
